# django-webcampicture

./: LICENSE  README.md  pyproject.toml  setup.cfg
django_webcampicture.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
webcampicture/: apps.py  constants.py  fields.py  forms.py  widgets.py
webcampicture/static/webcampicture/css/: webcampicture.css
webcampicture/static/webcampicture/js/: webcampicture.js
webcampicture/templates/webcampicture/: webcampicture.html
