[tool.poetry]
name = "django-webcampicture"
version = "0.1.5"
description = "A Django app to provide a WebcamPictureField, derived from FileField."
authors = ["rnetonet <rneto@rneto.net>"]
homepage = "https://github.com/rnetonet/django-webcampicture"
repository = "https://github.com/rnetonet/django-webcampicture"
readme = "README.md"
license = "MIT"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "webcampicture" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
