[metadata]
name = django-webcampicture
version = 0.0.1
description = A Django app to provide a WebcamPictureField, derived from ImageField.
long_description = file: README.rst
url = https://github.com/rnetonet/django-webcampicture
author = Rui Neto
author_email = rneto@rneto.net
license = MIT
classifiers =
    Environment :: Web Environment
    

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 1.11  # Replace "X.Y" as appropriate